Devops/k8s/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-web
  labels:
    app.kubernetes.io/name: task-manager-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: task-manager-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: task-manager-web
    spec:
      containers:
        - name: web
          image: task-manager-web:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
          # C-0013 / image nginx Alpine : UID/GID « nginx » en général 101:101
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
