Devops/k8s/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-web
  labels:
    app.kubernetes.io/name: task-manager-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: task-manager-web
  ports:
    - name: http
      port: 8080
      targetPort: http
